# multi_turtlebot3-with-MAPF

./: 429924  429924.pub  README.md  frames.gv  readme.txt
devel/: .catkin
devel/include/coverage_path_planner/: GetPathInZone.h  GetPathInZoneRequest.h  GetPathInZoneResponse.h
devel/include/mapf_msgs/: GlobalPlan.h  Goal.h  SinglePlan.h
devel/include/robint_msgs/: AddCleaningAreaList.h  AddCleaningAreaListRequest.h  AddCleaningAreaListResponse.h  AddCleaningPath.h  AddCleaningPathRequest.h  AddCleaningPathResponse.h  AddCurrentLocation.h  AddCurrentLocationRequest.h  AddCurrentLocationResponse.h  AddLocation.h  AddLocationList.h  AddLocationListRequest.h  AddLocationListResponse.h  AddLocationRequest.h  AddLocationResponse.h  AddMap.h  AddMapList.h  AddMapListRequest.h  AddMapListResponse.h  AddMapRequest.h  AddMapResponse.h  AddVirtualWall.h  AddVirtualWallList.h  AddVirtualWallListRequest.h  AddVirtualWallListResponse.h  AddVirtualWallRequest.h  AddVirtualWallResponse.h  AddZoneList.h  AddZoneListRequest.h  AddZoneListResponse.h  AutoChargeCommand.h  AutoChargeCommandRequest.h  AutoChargeCommandResponse.h  AutoChargeState.h  AutoCruiseCommand.h  AutoCruiseCommandRequest.h  AutoCruiseCommandResponse.h  AutoExploreCommand.h  AutoExploreCommandRequest.h  AutoExploreCommandResponse.h  (+392 more)
devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
devel/lib/coverage_path_planner/: path_planning_node
devel/lib/dynamixel_sdk/: group_sync_read.py  packet_handler.py  protocol2_packet_handler.py
devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
devel/lib/mapf_base/: goal_transformer  mapf_base  plan_executor
devel/lib/pkgconfig/: coverage_path_planner.pc  dynamixel_sdk.pc  dynamixel_sdk_examples.pc  mapf_base.pc  mapf_msgs.pc  mapf_ros.pc  roadrun_planner.pc  robint_msgs.pc  route_planner.pc  teb_local_planner.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
devel/lib/roadrun_planner/: roadrun_planner  robot_controller
devel/lib/teb_local_planner/: test_optim_node
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_pointop_key  turtlebot3_server
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_navigation/: multi_robot_goal_sender.py
devel/lib/turtlebot3_slam/: flat_world_imu_node
src/output311-18/: RG371.building.yaml
src/output311-18/RG371_L0/: model.config  model.sdf
src/pass-factory/: 0 .yaml  RG371.building.yaml  bing2.world  factory1.world  factory2.world  output .world  output.worlf
src/roadrun_planner/: CMakeLists.txt
src/roadrun_planner/src/: roadrun_planner.cpp  robot_controller.cpp
src/robint_msgs/: CMakeLists.txt  frames.gv  package.xml
src/robint_msgs/action/: MoveBase.action  TrackPath.action
src/robint_msgs/msg/: AutoChargeState.msg  BatteryState.msg  ChargeBaseInfo.msg  CleaningArea.msg  CleaningAreaInfo.msg  CruiseState.msg  CruiseTaskInfo.msg  CurrentTaskState.msg  ElevatorState.msg  ErrorCode.msg  ExplorationGoal.msg  FollowingState.msg  GateControlStatus.msg  GateInfo.msg  GateState.msg  HumanArray.msg  HumanMsg.msg  ImageInfo.msg  IsolatedWait.msg  IsolatedZone.msg  IsolatedZoneList.msg  JoystickPanelStatus.msg  LedControl.msg  Location.msg  LocationList.msg  LocationNameList.msg  MapData.msg  MapInfo.msg  (+37 more)
src/route_planner/: CMakeLists.txt  package.xml  plugin.xml
src/route_planner/config/: example.building.yaml
src/route_planner/launch/: run.launch
src/route_planner/src/: dijkstra_planner.cpp  dijkstra_planner.hpp  nav_graph.cpp  nav_graph.hpp  path_processor.hpp  route_planner.cpp  route_planner.hpp  route_planner_node.cpp  utility.hpp
src/turtlebot3/: frames.gv
(+1214 files in other folders)
