<?xml version="1.0"?>
<package format="2">
  <name>route_planner</name>
  <version>0.0.0</version>
  <description>The route_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jalong@todo.todo">jalong</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <depend>pluginlib</depend>
  <build_depend>robint_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>robint_msgs</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>robint_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>	

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <pluginlib plugin="${prefix}/plugin.xml"/>
    <nav_core plugin="${prefix}/plugin.xml"/>
    <mbf_costmap_core plugin="${prefix}/plugin.xml"/>
  </export>
</package>
